--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 footer, header{
     background-color: $main-color;
@@ -25,23 +27,46 @@ footer, header{
 header{
     height: 10vh;
     font-size: 30px;
-    position: absolute;
-   left: 0;
-   top: 0;
+
    height: 50px;
    width: 100%;
-   overflow:hidden;
+
 }
 footer{
-    position: absolute;
-   left: 0;
-   bottom: 0;
+
    height: 30px;
    width: 100%;
-   overflow:hidden;
    text-align: center;
 
     a{
         color: #fff;
     }
+}
+
+
+.RecipeArea{
+    justify-content: center;
+    width: 900px;
+    height: 500px;
+    background-color:rgba(198, 198, 198, 0.1);
+    margin: 0;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+
+
+}
+
+.RecipeBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Recipe{
+    border-bottom: 1px solid #E24E42;
+    width: 80%;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 15px;
 }
