--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,62 +1,59 @@
 $main-color: #e24e42;
 
-body{
+body {
     margin: 0;
     padding: 0;
     height: 100vh;
-
 }
 
-#app{
+#app {
     height: 100%;
-
 }
-.all{
+
+.all {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
-footer, header{
+
+footer,
+header {
     background-color: $main-color;
     color: #fff;
     font-family: 'Pacifico', cursive;
-
 }
-header{
+
+header {
     height: 10vh;
     font-size: 30px;
-
-   height: 50px;
-   width: 100%;
-
+    height: 50px;
+    width: 100%;
 }
-footer{
 
-   height: 30px;
-   width: 100%;
-   text-align: center;
+footer {
+    height: 30px;
+    width: 100%;
+    text-align: center;
 
-    a{
+    a {
         color: #fff;
     }
 }
 
-
-.RecipeArea{
+.RecipeArea {
     width: 900px;
     height: 500px;
-    background-color:rgba(198, 198, 198, 0.1);
+    background-color: rgba(198, 198, 198, 0.1);
     margin: 0;
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
-
-
-
-
+    display: flex;
+    justify-content: center;
 }
-.NewRecipeBtn{
+
+.NewRecipeBtn {
     width: 150px;
     padding: 10px;
     border-radius: 10px;
@@ -64,18 +61,47 @@ footer{
     background-color: #008f95;
     color: #FFF;
     font-weight: bold;
-    align-self:center;
+    align-self: center;
 }
 
-.RecipeBox{
+.RecipeBox {
     display: flex;
     flex-direction: column;
     justify-content: baseline;
     width: 80%;
+}
 
-.Recipe{
+.Recipe {
     border-bottom: 1px solid #E24E42;
     font-size: 30px;
     text-align: center;
     padding-top: 15px;
+}
+
+.recipes {
+    width: 100%;
+}
+
+.Ingredients {
+    width: 100%;
+    height: 200px;
+    box-shadow: 0 3px 2px rgb(157, 157, 157);
+    margin-top: 20px;
+    background-color: #FFFFFF;
+}
+
+.expand-recipe {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid $main-color;
+}
+
+.close-recipe {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid $main-color;
 }
