--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,6 +69,8 @@ footer {
     flex-direction: column;
     justify-content: baseline;
     width: 80%;
+    padding: 50px;
+    overflow: auto;
 }
 
 .Recipe {
@@ -82,12 +84,29 @@ footer {
     width: 100%;
 }
 
-.Ingredients {
+.IngredientsBox {
     width: 100%;
-    height: 200px;
+    height: 300px;
     box-shadow: 0 3px 2px rgb(157, 157, 157);
     margin-top: 20px;
     background-color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    div{
+        flex:1;
+        padding:10px;
+
+    }
+}
+
+.Ingredients {
+box-shadow:10px 4px 30px -10px rgba(157, 157, 157, 0.55);
+
+}
+
+.Description {
+    text-align: justify;
+
 }
 
 .expand-recipe {
