--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,10 +26,18 @@ header {
 }
 
 header {
-    height: 10vh;
-    font-size: 30px;
-    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 20px 0 20px;
     width: 100%;
+    height: 60px;
+
+
+    h1{
+        font-size: 30px;
+    }
 }
 
 footer {
@@ -42,9 +50,15 @@ footer {
     }
 }
 
+.book-body{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .RecipeArea {
-    width: 900px;
-    height: 500px;
+    width: 80%;
+    height: 70vh;
     background-color: rgba(198, 198, 198, 0.1);
     margin: 0;
     border-radius: 10px;
@@ -71,7 +85,25 @@ footer {
     width: 80%;
     padding: 50px;
     overflow: auto;
+
+    &::-webkit-scrollbar-track{
+    	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    	border-radius: 10px;
+        margin: 20px;
+    	background-color: #F5F5F5;
+    }
+
+    &::-webkit-scrollbar{
+    	width: 12px;
+    }
+
+    &::-webkit-scrollbar-thumb{
+    	border-radius: 10px;
+    	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    	background-color: #555;
+    }
 }
+
 
 .Recipe {
     border-bottom: 1px solid #E24E42;
